Fix : Event links are overlapping in the preview [SDESK-6558]

--- a/client/components/UI/Form/style.scss
+++ b/client/components/UI/Form/style.scss
@@ -123,3 +123,9 @@
 .nav-tabs__content--no-padding {
     padding: 0px !important;
 }
+
+.form-label--display-link {
+    position: static !important;
+    display: flex !important;
+    flex-direction: column;
+}
